ch9/headless/httpbin-dr.yaml
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: httpbin-headless-mtls
  namespace: istioinaction
spec:
  host: httpbin-headless.istioinaction.svc.cluster.local
  trafficPolicy:
    tls:
      mode: ISTIO_MUTUAL
